--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,16 +13,9 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: 18
-
-      - name: Cache Node modules
-        id: node-cache
-        uses: actions/cache@v2
-        with:
-          path: node_modules
-          key: node-modules-${{ hashFiles('package-lock.json') }}
+          cache: 'npm'
 
       - name: Install Node modules
-        if: steps.node-cache.outputs.cache-hit != 'true'
         run: npm ci
 
       - name: Build pdf-worker
